Fixed tooltip and whitespace bugs (#18)
* Fixed tooltip and whitespace bugs

* Implemented tooltips with bootstrap

--- a/frontend/src/Courses.css
+++ b/frontend/src/Courses.css
@@ -1,7 +1,7 @@
 /* items in semester columns */
 .semesters li{
   font-size: large;
-  height: 40px;
+  height: 36px;
   width: 96%;
   margin-left: 2%;
   padding: 5px;
@@ -12,7 +12,7 @@
 }
 
 /* for courses with long names */
-.semesters .course_name{
+.semesters .course-name{
 	width: 90%;
 	overflow: hidden;
 	float: left;
@@ -20,12 +20,12 @@
 	white-space:nowrap;
 }
 
-.semesters .course_title{
+.semesters .course-title{
 	/* deletes title */
 	display:none;
 }
 
-.semesters .delete_course {
+.semesters .delete-course {
 	/* adds delete button */
 	display: inline;
 }
@@ -39,7 +39,7 @@
   padding: 5px !important;
 }
 
-.gu-mirror .course_title{
+.gu-mirror .course-title{
 	/* deletes title*/
 	display:none;
 }
@@ -49,7 +49,7 @@ li:hover{
 }
 
 /* courses in search results*/
-.course_display {
+.course-display {
   font-size: 13px;
   padding-left: 2px;
   width: 100%;
@@ -60,29 +60,8 @@ li:hover{
   color: #DB7093;
 }
 
-.delete_course {
+.delete-course {
 	/* gets rid of delete button */
 	display:none;
 	float:right;
-}
-
-/* Tooltip */
-.tooltip-custom .tooltiptext-custom {
-	font-size: small;
-    visibility: hidden;
-    width: 120px;
-    height: auto !important;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    white-space:normal !important;
-    position: absolute;
-    z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip-custom:hover.showtip .tooltiptext-custom {
-    visibility: visible;
 }
